--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Clarence
-                        <span class="text-primary">Taylorss</span>
+                        <span class="text-primary">Taylorsss</span>
                     </h1>
                     <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
