--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">    
     <body id="page-top">
-        <a href="/john.html">JOHN</a>
+        <p id="john">JOHN</p>
         <a href="/pages/serena.html">SERENA</a>
         <a href="/pages/nick.html">NICK</a>
         <a href="/pages/nicholas.html">NICHOLAS</a>
