--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">    
     <body id="page-top">
         <p id="john">JOHN</p>
-        <a href="/pages/serena.html">SERENA</a>
-        <a href="/pages/nick.html">NICK</a>
-        <a href="/pages/nicholas.html">NICHOLAS</a>
-        <a href="/pages/jack.html">JACK</a>
-        <a href="/pages/angelo.html">ANGELO</a>
+        <a href="john.html">JOHN</a>
+        <a href="pages/serena.html">SERENA</a>
+        <a href="pages/nick.html">NICK</a>
+        <a href="pages/nicholas.html">NICHOLAS</a>
+        <a href="pages/jack.html">JACK</a>
+        <a href="pages/angelo.html">ANGELO</a>
     </body>
 </html>
