--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">    
     <body id="page-top">
-        <p id="john">JOHN</p>
         <a href="john.html">JOHN</a>
-        <a href="pages/serena.html">SERENA</a>
-        <a href="pages/nick.html">NICK</a>
-        <a href="pages/nicholas.html">NICHOLAS</a>
-        <a href="pages/jack.html">JACK</a>
-        <a href="pages/angelo.html">ANGELO</a>
+        <a href="serena.html">SERENA</a>
+        <a href="nick.html">NICK</a>
+        <a href="nicholas.html">NICHOLAS</a>
+        <a href="jack.html">JACK</a>
+        <a href="angelo.html">ANGELO</a>
     </body>
 </html>
