--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">    
     <body id="page-top">
-        <a href="john.html">JOHN</a>
-        <a href="serena.html">SERENA</a>
-        <a href="nick.html">NICK</a>
-        <a href="nicholas.html">NICHOLAS</a>
-        <a href="jack.html">JACK</a>
-        <a href="angelo.html">ANGELO</a>
+        <a href="john">JOHN</a>
+        <a href="serena">SERENA</a>
+        <a href="nick">NICK</a>
+        <a href="nicholas">NICHOLAS</a>
+        <a href="jack">JACK</a>
+        <a href="angelo">ANGELO</a>
     </body>
 </html>
