--- a/angelo.html
+++ b/angelo.html
@@ -41,10 +41,10 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Angelo
-                        <span class="text-primary">Taylor</span>
+                        <span class="text-primary">Tangonan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Changed Addy · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                        Software Engineering BE(Hons) · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
