removed tab spacing in achievements

--- a/serena.html
+++ b/serena.html
@@ -167,8 +167,8 @@
                         <li>
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                                 <b>Dean's Honours List</b>
-                                <br><span style="padding-left: 15px;"> University of Auckland, Faculty of Engineering
-                                <br><span style="padding-left: 15px;">Excellence in academic performance by being in the top 5% of the year 
+                                <br>University of Auckland, Faculty of Engineering
+                                <br>Excellence in academic performance by being in the top 5% of the year 
                         </li>
                         
                         <p>
@@ -184,7 +184,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <b>LTCL Piano Recital</b>
-                            <br><span style="padding-left: 15px;"> Attained with Distinction
+                            <br>Attained with Distinction
                         </li>
                         </p>
 
