made some changes to contet... still a lot tbd

--- a/john.html
+++ b/john.html
@@ -27,11 +27,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>        
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +49,7 @@
                         Software Engineer BE(Hons) · (021) 085-87480 ·
                         <a href="mailto:john.bm.chen@gmail.com">john.bm.chen@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">An Aspiring Software Developer. YO I DONT KNOW WHAT TO ADD HEREEEEEEEEEEEE.</p>
+                    <p class="lead mb-5">An aspiring software developer with a passion for how technology can be used for the betterment of societal and business outcomes. An avid learner, excited by the potential that the technology of tomorrow holds.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/johnc383/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/johnchen383" target="_blank"><i class="fab fa-github"></i></a>
@@ -63,35 +64,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Research and Development Intern</h3>
+                            <div class="subheading mb-3">Hynds SmarterWater</div>
+                            <p>Helping to achieve smarter solutions for urban and rural water management systems via IoT devices.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dec 2020 - Feb 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Research and Development Intern</h3>
+                            <div class="subheading mb-3">Hynds SmarterWater</div>
+                            <p>Helping to achieve smarter solutions for urban and rural water management systems via IoT devices.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2020 - Feb 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -102,21 +87,75 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">TThe University of Auckland</h3>
+                            <div class="subheading mb-3">Bachelor of Engineer Honours</div>
+                            <div>Software Engineering</div>
+                            <div>Clubs & Societies | Student Life, Unichurch, TBD</div>
+                            <p>GPA: 9.0</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Manurewa High School</h3>
+                            <div class="subheading mb-3">National Certificate of Educational Achievement
+                            </div>
+                            <div>Clubs & Societies | Concert Band, Drumline, Badminton, Table Tennis, Spoken Word</div>
+                            <p>Excellence Endorsed at levels 1, 2, 3</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Feb 2015 - Dec 2019</span></div>
                     </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Achievements</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Part 1 Engineering</b></em></div>
+                            Deans Honour List (top 5% of cohort) <br />
+                            First in Course | ENGGEN 115: Principles of Engineering Design <br />
+                            First in CAD Design for ENGGEN 115 – Captain Pi’s Soarin’ Roger <a href="#">(see project)</a><br />
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Scholarships</b></em></div>
+                            NZQA Scholarship Award (Calculus, Physics, Statistics, and Biology) <br />
+                            University of Auckland Top Achiever Scholarship<br />
+                            Hynds Foundation Engineering Scholarship<br />
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Manurewa High School</b></em></div>
+                            DUX 2019<br />
+                            Head Boy 2019<br />
+                            First in Class | Physics, Calculus, Biology, Chemistry, Statistics<br />
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>International Young Physicists Tournament</b></em></div>
+                            Captain of School Team | 4th Regionals, 6th Nationals<br />
+                            Member of National Team | Awarded Silver | @ Warsaw, Poland<br />
+                            <a href="#">(see presentations)</a> <br />
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>International Mathematics Modelling Competition</b></em></div>
+                            Member of School Team | 1st Nationals | Top 5 Internationally<br />
+                            Attended Cermony for Meritorious Teams | @ Hong Kong <a href="#">(see more)</a> <br />
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Future Problem Solving Internationals</b></em></div>
+                            Member of School Team<br />
+                            Competition Year (2015/2016) | 2nd Nationals | 14th Internationals | @ Michigan University, USA<br />
+                            Competition Year (2016/2017) | 1st Nationals | 4th Internationals | @ Wisconsin University, USA<br />
+                            Competition Year (2017/2018) | 2nd Nationals | 13th Internationals | @ Wisconsin University, USA<br />
+                        </li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -169,53 +208,7 @@
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
+            
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
