tried implementing going back button

--- a/john.html
+++ b/john.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -33,6 +34,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <!-- <li><hr class="nav-line"/></li> -->
+                    <li class="nav-item nav-bottom"><a class="nav-link js-scroll-trigger" href="index">Meet the Team</a></li>
                 </ul>
             </div>
         </nav>
