added a bit more content... i really should be studying instead :))

--- a/john.html
+++ b/john.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <!-- <li><hr class="nav-line"/></li> -->
@@ -90,7 +91,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">TThe University of Auckland</h3>
+                            <h3 class="mb-0">The University of Auckland</h3>
                             <div class="subheading mb-3">Bachelor of Engineer Honours</div>
                             <div>Software Engineering</div>
                             <div>Clubs & Societies | Student Life, Unichurch, TBD</div>
@@ -103,7 +104,7 @@
                             <h3 class="mb-0">Manurewa High School</h3>
                             <div class="subheading mb-3">National Certificate of Educational Achievement
                             </div>
-                            <div>Clubs & Societies | Concert Band, Drumline, Badminton, Table Tennis, Spoken Word</div>
+                            <div>Clubs & Societies | Concert Band, Drumline, Badminton, Table Tennis, Spoken Word, Animation</div>
                             <p>Excellence Endorsed at levels 1, 2, 3</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Feb 2015 - Dec 2019</span></div>
@@ -111,10 +112,19 @@
                 </div>
             </section>
             <hr class="m-0" />
+             <!-- Projects-->
+             <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    MAKE IT SNAZZY!!
+                </div>
+            </section>
+            <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Achievements</h2>
+                    <a href="#secondary">Jump to secondary schooling</a>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
@@ -130,7 +140,7 @@
                             University of Auckland Top Achiever Scholarship<br />
                             Hynds Foundation Engineering Scholarship<br />
                         </li>
-                        <li>
+                        <li id="secondary">
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                             <div><em><b>Manurewa High School</b></em></div>
                             DUX 2019<br />
@@ -141,8 +151,7 @@
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                             <div><em><b>International Young Physicists Tournament</b></em></div>
                             Captain of School Team | 4th Regionals, 6th Nationals<br />
-                            Member of National Team | Awarded Silver | @ Warsaw, Poland<br />
-                            <a href="#">(see presentations)</a> <br />
+                            Member of National Team | Awarded Silver | @ Warsaw, Poland <a href="#">(see presentations)</a><br />
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
@@ -158,7 +167,56 @@
                             Competition Year (2016/2017) | 1st Nationals | 4th Internationals | @ Wisconsin University, USA<br />
                             Competition Year (2017/2018) | 2nd Nationals | 13th Internationals | @ Wisconsin University, USA<br />
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Student Representative on Board of Trustees | 2015</b></em></div>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                            <div><em><b>Recipient of Ministry of Youth Development Digital Enterprise Award | 2017</b></em></div>
+                        </li>
                     </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Volunteering-->
+            <section class="resume-section" id="volunteering">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Volunteering</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">YTech NZ</h3>
+                            <div class="subheading mb-3">Executive Member and Operations Lead</div>
+                            <p>In partnership with CreateOps, YTech hosts events 
+                            that bring industry and secondary schools together to one place at one time to foster connection between the 
+                            technological leaders of today and tomorrow. 
+                            Following the success of their events such as <a href="#">‘YTech: Walking on Mars’</a> and ‘AI: The World of Tomorrow’, 
+                            YTech NZ continues to provide insight into STEM pathways and hopes to expand nationwide in the future — 
+                            particularly to rural and underrepresented communities.</p>
+                            <div class="social-icons-sm">
+                                <a class="social-icon-sm" href="https://www.linkedin.com/company/ytechnz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="social-icon-sm" href="https://www.facebook.com/ytechnz" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a class="social-icon-sm" href="https://www.instagram.com/ytechnz/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2017 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Manurewa Youth Council</h3>
+                            <div class="subheading mb-3">Events Lead / Treasurer et al.
+                            </div>
+                            <p>The Manurewa Youth Council is a Charitable Trust of 21 young people between the ages of 12-24 years old, 
+                                selected annually from a wide range of ethnic and cultural backgrounds, reflecting the local community of 
+                                Manurewa. We connect, support and empower young people to be actively involved in the community.</p>
+                            <div class="social-icons-sm">
+                                <a class="social-icon-sm" href="https://www.manurewayouthcouncil.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a class="social-icon-sm" href="https://www.facebook.com/rewayouthcouncil" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a class="social-icon-sm" href="https://www.instagram.com/manurewayouthcouncil" target="_blank"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov 2015 - Nov 2018</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -207,7 +265,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p>I have no interests cos im a nerdddddddddd</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
