--- a/nick.html
+++ b/nick.html
@@ -18,7 +18,9 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a href="index.html">Other Experts</a>
+            <a href="index.html">
+                <i class="fas fa-chevron-left fa-5x" style="color:white"></i>
+            </a>
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
