implemented js scroll trigger

--- a/john.html
+++ b/john.html
@@ -122,7 +122,7 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Achievements</h2>
-                    <a href="#secondary">Jump to secondary schooling</a>
+                    <a class="js-scroll-trigger" href="#secondary">Jump to secondary schooling</a>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
