--- a/nick.html
+++ b/nick.html
@@ -18,9 +18,11 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top backicon" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a href="index.html">
-                <i class="fas fa-chevron-left fa-4x"></i>
+                <div class="backicon">
+                    <i class="fas fa-chevron-left fa-4x"></i>
+                </div>
             </a>
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
